<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.swsk33</groupId>
	<artifactId>code-post-parent</artifactId>
	<version>1.1.0</version>
	<packaging>pom</packaging>
	<name>CodePost - Parent</name>
	<description>CodePost是一个简单的邮件验证码生成和发送框架，用于简化后端服务中生成、发送和验证邮件验证码的逻辑</description>
	<url>https://github.com/swsk33/code-post</url>

	<!-- 需要构建的子模块 -->
	<modules>
		<module>code-post-core</module>
		<module>code-post-spring-boot-starter</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring.boot.starter.version>2.7.11</spring.boot.starter.version>
		<code-post.version>1.1.0</code-post.version>
	</properties>

	<licenses>
		<license>
			<name>GNU General Public License v2.0</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/swsk33/code-post</url>
		<connection>git@github.com:swsk33/code-post.git</connection>
		<developerConnection>git@github.com:swsk33/code-post.git</developerConnection>
	</scm>

	<developers>
		<developer>
			<name>守望时空33</name>
			<email>yanhanhui2001a@163.com</email>
			<url>https://github.com/swsk33</url>
		</developer>
	</developers>

	<!-- 公用依赖 -->
	<dependencies>
		<!-- Lombok注解支持 -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<!-- 依赖版本管理 -->
	<dependencyManagement>
		<dependencies>
			<!-- Hutool -->
			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>5.8.27</version>
			</dependency>

			<!-- Jakarta Mail邮件支持，包含Jakarta Mail API及其实现类Angus Mail（原JavaEE Mail） -->
			<dependency>
				<groupId>org.eclipse.angus</groupId>
				<artifactId>jakarta.mail</artifactId>
				<version>2.0.3</version>
			</dependency>

			<!-- FreeMarker模板渲染器 -->
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>2.3.32</version>
			</dependency>

			<!-- Lettuce Redis客户端 -->
			<dependency>
				<groupId>io.lettuce</groupId>
				<artifactId>lettuce-core</artifactId>
				<version>6.3.2.RELEASE</version>
			</dependency>

			<!-- Slf4J API -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.13</version>
			</dependency>

			<!-- Spring Boot Starter支持 -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>${spring.boot.starter.version}</version>
			</dependency>

			<!-- Spring Boot配置生成器 -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-configuration-processor</artifactId>
				<version>${spring.boot.starter.version}</version>
			</dependency>

			<!-- CodePost核心 -->
			<dependency>
				<groupId>io.github.swsk33</groupId>
				<artifactId>code-post-core</artifactId>
				<version>${code-post.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- Sonatype中央仓库发布插件 -->
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.3.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<tokenAuth>true</tokenAuth>
				</configuration>
			</plugin>

			<!-- 源码生成插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Javadoc文档生成插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- GPG签名插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>